--- a/pom.xml
+++ b/pom.xml
@@ -20,31 +20,31 @@
 	<dependency>
 	    <groupId>redis.clients</groupId>
 	    <artifactId>jedis</artifactId>
-	    <version>3.3.0</version>
+	    <version>5.2.0</version>
 	</dependency>
+
 	
-	<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+	<!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
 	<dependency>
 	    <groupId>org.mongodb</groupId>
-	    <artifactId>mongo-java-driver</artifactId>
-	    <version>3.12.7</version>
+	    <artifactId>mongodb-driver-sync</artifactId>
+	    <version>5.2.0</version>
 	</dependency>
+
 	
 	<!-- https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver -->
 	<dependency>
 	    <groupId>org.neo4j.driver</groupId>
 	    <artifactId>neo4j-java-driver</artifactId>
-	    <version>4.1.1</version>
+	    <version>5.25.0</version>
 	</dependency>	
 	
-	<!-- https://mvnrepository.com/artifact/com.datastax.cassandra/cassandra-driver-core -->
+	<!-- https://mvnrepository.com/artifact/org.apache.cassandra/java-driver-core -->
 	<dependency>
-	    <groupId>com.datastax.cassandra</groupId>
-	    <artifactId>cassandra-driver-core</artifactId>
-	    <version>3.10.2</version>
-	</dependency>
-	
-	
+	    <groupId>org.apache.cassandra</groupId>
+	    <artifactId>java-driver-core</artifactId>
+	    <version>4.18.1</version>
+	</dependency>	
   	
     <dependency>
       <groupId>junit</groupId>
@@ -52,6 +52,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
   
   <build>
@@ -60,8 +61,8 @@
 	      <groupId>org.apache.maven.plugins</groupId>
 	      <artifactId>maven-compiler-plugin</artifactId>
 	      <configuration>
-	        <source>1.8</source>
-	        <target>1.8</target>
+	        <source>21</source>
+	        <target>21</target>
 	      </configuration>
 	    </plugin>
 	  </plugins>
